trunk/Archive2/f7/21a81b873a6a54/output
main.cpp:4:5: error: '__m256d' does not name a type
     __m256d align;
     ^
main.cpp:5:19: error: 'ChildClassA' was not declared in this scope
     char A[sizeof(ChildClassA)];
                   ^
main.cpp:6:19: error: 'ChildClassB' was not declared in this scope
     char B[sizeof(ChildClassB)];
                   ^
main.cpp:7:19: error: 'ChildClassC' was not declared in this scope
     char C[sizeof(ChildClassC)];
                   ^
main.cpp:8:1: error: namespace-scope anonymous aggregates must be static
 };
 ^
main.cpp:10:1: error: 'ParentClass' does not name a type
 ParentClass *ptr;
 ^
main.cpp:12:1: error: expected unqualified-id before 'switch'
 switch (...){
 ^
main.cpp:21:1: error: 'ptr' does not name a type
 ptr->method1();
 ^
main.cpp:22:1: error: 'ptr' does not name a type
 ptr->method2();
 ^
main.cpp:23:1: error: 'ptr' does not name a type
 ptr->method3();
 ^
